# irwin

./: .gitignore  Env.py  README.md  app.py  client.py  default_imports.py  devenv.nix  devenv.yaml  lichess-listener.py  pyproject.toml
.github/workflows/: docker.yml
conf/: ConfigWrapper.py
modules/client/: Api.py
modules/fishnet/: fishnet.py
modules/game/: EngineTools.py
modules/irwin/: AnalysedGameModel.py  BasicGameModel.py  Env.py
stockfish/: stockfish-x86_64-modern
webapp/: metrics.py
webapp/controllers/api/: blueprint.py
